# fetish-rs

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.tdlib  README.md
config/: Cargo.toml
config/src/: config.rs  lib.rs
fetish/: Cargo.toml
fetish/src/: auth.rs  fetish.rs  main.rs  message_sender.rs  mongo.rs  recorder.rs  scam_analyser.rs  tgfn.rs  thelp.rs
model/: Cargo.toml
model/src/: chat.rs  config.rs  lib.rs  message.rs  record.rs  sanction.rs  stats.rs  user.rs
res/: keywords.json  telegram-client.DESKTOP-JL9A6T4.toml  telegram-client.docker.prod.toml  telegram-client.docker.toml
