[package]
name = "fetish"
version = "1.4.1"
authors = ["Xobtah"]
edition = "2018"

[dependencies]
config = { path = "../config" }
model = { path = "../model" }
telegram-client = "1.7.0"
rtdlib = { version = "1.7.0", features = [ "sys" ] }
log = "0.4.14"
simple_logger = "1.11.0"
tokio = { version = "1.4.0", features = [ "full" ] }
futures = "0.3.13"
rand = "0.8.3"
colored = "2.0.0"
regex = "1.4.5"
toolkit = "0.1.1"
serde_json = "1.0.64"
unidecode = "0.3.0"

[dependencies.mongodb]
version = "1.2.1"
default-features = false
features = ["sync"]
